More or less reverted TermView::KeyDown() to r21695. Fixes bug #1340. Thanks to Ingo & Korli for the help.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21751 a95241bf-73f2-0310-859d-f6bbb57e9c96